Add support to Junit 5